se realizan cambion en el aplicativo a nivel general

--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,7 @@ ul li form {
 }
 
 .container-done {
-	background-color: white;
+	background-color: black;
 	width: 24px;
 	height: 24px;
 	border-radius: 20px;
