--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-  font-size: 17px;
-}
+  }
 
 :root {
 	--rojo: #ba181b;
@@ -31,8 +30,6 @@ body {
 
 h1 {
 	text-align: center;
-  font-size: 34px;
-
 }
 
 
@@ -92,8 +89,8 @@ ul li form {
 	outline: none;
 }
 
-.container-done {
-	background-color: black;
+.container-complete {
+	background-color: white;
 	width: 24px;
 	height: 24px;
 	border-radius: 20px;
@@ -101,7 +98,7 @@ ul li form {
 	cursor: pointer;
 }
 
-.container-done.active {
+.container-complete.active {
 	background-color: var(--verde);
 }
 
@@ -156,11 +153,6 @@ form {
 	font-size: 24px;
 }
 
-.AddTask {
-  padding: 10px 20px;
-  margin: 10px 10px;
-  
-}
 
 .input-add {
 	border: none;
@@ -178,21 +170,14 @@ form {
 	border: none;
 	background-color: var(--azul);
 	color: #fff;
-  
-  align-items: center;
-	justify-content: center;
-	padding: 8px 15px;
-	border-radius: 10%;
+    padding: 5px 40px;
+	border-radius: 20%;
 	font-family: inherit;
 	cursor: pointer;
+	font-size: 17px;
 	
 }
 
 .btn-add:hover {
-	background-color: var(--verde-hover);
-}
-
-
-p{
-	text-decoration: line-through;
+	background-color: var(--azul-hover);
 }
