--- a/src/App.css
+++ b/src/App.css
@@ -183,3 +183,153 @@ form {
 .btn-add:hover {
 	background-color: var(--azul-hover);
 }
+
+/* Responsive styles */
+
+/* For smaller screens, adjust the width of the card */
+@media (max-width: 768px) {
+	.card-to-do {
+		width: 100%;
+	}
+	.btn-add, .btn-edit, .btn-delete {
+		padding: 10px 20px;
+	}
+}
+
+/* For even smaller screens, adjust the margin and padding of the card */
+@media (max-width: 480px) {
+	.card-to-do {
+		margin: 10px;
+		padding: 15px;
+	}
+	.btn-add, .btn-edit, .btn-delete {
+		padding: 5px 10px;
+	}
+}
+
+/* For larger screens, adjust the layout of the list items */
+@media (min-width: 1024px) {
+	ul {
+		flex-direction: row;
+		flex-wrap: wrap;
+	}
+}
+
+
+.container{
+    margin: 0 auto;
+    width: 90%;
+    max-width: 1200px;
+    overflow: hidden;
+	
+	margin-bottom: 20px;
+}
+
+.hero{
+    
+    background-size: cover;
+    
+    background-color: gray;
+    
+}
+
+.nav{
+    --state-close: scale(0);
+    --state-hamburguer:scale(1);
+    --state-menu: translate(-100%);
+
+    padding: 1% ;
+    display: grid;
+    justify-content: space-between;
+    align-items: center;
+    grid-template-columns: repeat(2, max-content);
+}
+
+.nav:target{
+    --state-menu: translate(0);
+    --state-close: scale(1);
+    --state-hamburguer:scale(0);
+}
+
+.nav__logo{
+    font-size: 2.5rem;
+    z-index: 1;
+}
+
+.nav__hamburguer, 
+.nav__close{
+    cursor: pointer;
+    grid-column: -2/-1;
+    grid-row: 1/2;
+    transition: .4s transform;
+}
+
+.nav__hamburguer{
+    transform: var(--state-hamburguer);
+}
+
+.nav__close{
+    transform: var(--state-close);
+}
+
+.nav__icon{
+    width: 40px;
+}
+
+.nav__links{
+    background-color: #000;
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    padding: 0;
+
+    display: grid;
+    align-content: center;
+    gap: 2em;
+    padding-left: 5%;
+
+    transform: var(--state-menu);
+    transition: .3s transform;
+}
+
+.nav__item{
+    list-style: none;
+}
+
+.nav__link{
+    color: #fff;
+    text-decoration: none;
+    font-size: 1.2rem;
+    letter-spacing: 2px;
+}
+
+@media (min-width:768px) {
+    .nav{
+        --state-hamburguer:scale(0);
+        --state-menu: translate(0);
+    }
+    
+    .nav:target{
+        --state-close: scale(0);
+    }
+
+    .nav__links{
+        padding: 0;
+        background-color: unset;
+        position: unset;
+        gap: 1.5em;
+        grid-auto-flow: column;
+    
+        transform: unset;
+
+        grid-column: -2/-1;
+        grid-row: 1/2;
+    }
+
+    .nav__link{
+        font-size: 1rem;
+        letter-spacing: none;
+    }
+}
